--- a/BsvSimpleLibrary/BsvSimpleLibrary.csproj
+++ b/BsvSimpleLibrary/BsvSimpleLibrary.csproj
@@ -2,12 +2,35 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.0</FileVersion>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Authors>wy</Authors>
+    <Company>wy</Company>
+    <Copyright>Open BSV License</Copyright>
+    <PackageProjectUrl>https://github.com/wy000000/BsvSimpleLibrary</PackageProjectUrl>
+    <Description>This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain.</Description>
+    <PackageReleaseNotes>This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain..</PackageReleaseNotes>
+    <Version>0.1.0</Version>
+    <Product>BsvSimpleLibrary</Product>
+    <PackageId>BsvSimpleLibrary</PackageId>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageLicenseExpression></PackageLicenseExpression>
+    <PackageLicenseUrl>https://github.com/bitcoin-sv/bitcoin-sv/blob/master/LICENSE</PackageLicenseUrl>
+    <PackageLicenseFile>Open BSV License.txt</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="NBitcoin" Version="4.2.14" />
     <PackageReference Include="NBitcoin.Altcoins" Version="1.0.4" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Open BSV License.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
