--- a/BsvSimpleLibrary/BsvSimpleLibrary.csproj
+++ b/BsvSimpleLibrary/BsvSimpleLibrary.csproj
@@ -2,16 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>0.0.0.0</AssemblyVersion>
-    <FileVersion>0.0.0.0</FileVersion>
+    <AssemblyVersion>0.1.0.0</AssemblyVersion>
+    <FileVersion>0.1.0.0</FileVersion>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <Authors>wy</Authors>
     <Company>wy</Company>
     <Copyright>Open BSV License</Copyright>
     <PackageProjectUrl>https://github.com/wy000000/BsvSimpleLibrary</PackageProjectUrl>
     <Description>This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain.</Description>
-    <PackageReleaseNotes>This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain..</PackageReleaseNotes>
-    <Version>0.1.0</Version>
+    <PackageReleaseNotes>AES is added.</PackageReleaseNotes>
+    <Version>0.1.2</Version>
     <Product>BsvSimpleLibrary</Product>
     <PackageId>BsvSimpleLibrary</PackageId>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
