--- a/BsvSimpleLibrary/BsvSimpleLibrary.csproj
+++ b/BsvSimpleLibrary/BsvSimpleLibrary.csproj
@@ -2,23 +2,33 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AssemblyVersion>0.1.5.0</AssemblyVersion>
+    <FileVersion>0.1.5.0</FileVersion>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>wy</Authors>
     <Company>wy</Company>
     <Copyright>Open BSV License</Copyright>
     <PackageProjectUrl>https://github.com/wy000000/BsvSimpleLibrary</PackageProjectUrl>
-    <Description>This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain.</Description>
-    <PackageReleaseNotes>donation method is updated.</PackageReleaseNotes>
-    <Version>0.1.3</Version>
+    <Description>ver 0.1.5. Bsv price is added. It is from OKEx based on USDT.
+AES is deleted. It is move to BitcoinSVCryptor library. Both of them are not compatible.
+This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain.</Description>
+    <PackageReleaseNotes>ver 0.1.5. Bsv price is added. It is from OKEx based on USDT.
+AES is deleted. It is move to BitcoinSVCryptor library. Both of them are not compatible.</PackageReleaseNotes>
+    <Version>0.1.5</Version>
     <Product>BsvSimpleLibrary</Product>
     <PackageId>BsvSimpleLibrary</PackageId>
-    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
     <PackageLicenseExpression></PackageLicenseExpression>
     <PackageLicenseUrl>https://github.com/bitcoin-sv/bitcoin-sv/blob/master/LICENSE</PackageLicenseUrl>
     <PackageLicenseFile>Open BSV License.txt</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="AES.cs" />
+    <Compile Remove="Encryptor.cs" />
+    <Compile Remove="HttpInterceptor.cs" />
+    <Compile Remove="SdkApi.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="NBitcoin" Version="4.2.14" />
@@ -31,6 +41,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
