--- a/BsvSimpleLibrary/BsvSimpleLibrary.csproj
+++ b/BsvSimpleLibrary/BsvSimpleLibrary.csproj
@@ -2,14 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <AssemblyVersion>0.2.1.0</AssemblyVersion>
-    <FileVersion>0.2.1.0</FileVersion>
+    <AssemblyVersion>0.2.2.0</AssemblyVersion>
+    <FileVersion>0.2.2.0</FileVersion>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>wy</Authors>
     <Company>wy</Company>
     <Copyright>Open BSV License</Copyright>
     <PackageProjectUrl>https://github.com/wy000000/BsvSimpleLibrary</PackageProjectUrl>
-    <Description>Ver 0.21 added a tx sending function to pass the sent tx, tx fee and donation fee out.
+    <Description>Ver 0.22 is updated to be compatible with Nbitcoin 5.0.76.
+Ver 0.21 added a tx sending function to pass the sent tx, tx fee and donation fee out.
 Ver 0.20 fixed a bug of getOpReturnData function.
 Ver 0.19, the omitted getOpReturnData(RestApiTransaction tx, Encoding encoder) function is re-added.
 Ver 0.18 is updated OP_Return to OP_False Op_Return.
@@ -17,10 +18,14 @@ Ver 0.17 is added with get address history and txs. function names are changed.
 Ver 0.16 is moved to whatsonchain.com since RestApi.network is unavailable. More functions will be listed in future version.
 ver 0.1.5. Bsv price is added. It is from OKEx based on USDT.
 AES is deleted. It is move to BitcoinSVCryptor library. Both of them are not compatible.
-This is a simple example to send bsv satoshis to an address from an address and/or write/read data to/from BSV blockchain.
+
+This is a simple example to send bsv satoshis to a destination address from a source address and/or write/read data to/from BSV blockchain.
+
+bitcoinSV
+BSV
 </Description>
-    <PackageReleaseNotes>Ver 0.21 added a tx sending function to pass the sent tx, tx fee and donation fee out.</PackageReleaseNotes>
-    <Version>0.2.1</Version>
+    <PackageReleaseNotes>Ver 0.22 is updated to be compatible with Nbitcoin 5.0.76.</PackageReleaseNotes>
+    <Version>0.2.2</Version>
     <Product>BsvSimpleLibrary</Product>
     <PackageId>BsvSimpleLibrary</PackageId>
     <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
@@ -36,9 +41,9 @@ This is a simple example to send bsv satoshis to an address from an address and/
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="NBitcoin" Version="4.2.14" />
-    <PackageReference Include="NBitcoin.Altcoins" Version="1.0.4" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="NBitcoin" Version="5.0.76" />
+    <PackageReference Include="NBitcoin.Altcoins" Version="2.0.30" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
   <ItemGroup>
